# sages_2024_01_13

./: .gitignore  01_download_data.py  02_preprocess_data.py  03_train_model.py  Makefile  args1.py  args2.py  codeconfig.py  config.toml  config.yaml  envs.py  pyproject.toml  tomlargs.py  yamlargs.py
data/models/prophet/: model.json
data/preprocessed/: normalizer.pkl  test_data.csv  train_data.csv
features/: sum_array.feature  users.feature
features/steps/: sum_array.py
